Add discussion re coronavirus data repository

--- a/_posts/2020-04-26-week11.md
+++ b/_posts/2020-04-26-week11.md
@@ -11,7 +11,11 @@ Professor Weiss recently pointed out a fascinating project, of which I had not h
 However, the initiative also contains an "Open Source Pilot Program" whereby agencies must release at least 20% of newly developed Federal source code to the public. (Notably the code.gov website itself is an open source project.) As with most things open source, I believe this can only be beneficial (provided careful security review and precautions) on both sides of the exchange: the public benefitting from usage of such code and opportunities to contribute, and the government benefitting from review, ideas and contributions. Without extensive background in web technologies and possessing only beginner knowledge of JavaScript, my own ability to contribute to the [open tasks and issues](https://code.gov/open-tasks) may be limited but not out of the question. In particular, I found some opportunities to work on a CDC tool which seem interesting and of reasonable beginner difficulty [here](https://github.com/CDCgov/MicrobeTrace/issues/47) and [here](https://github.com/CDCgov/MicrobeTrace/issues/32).
 
 # Coronavirus Data Repository by John Hopkins CSSE
+Another project highlighted by Professor Weiss is the [2019 Novel Coronavirus COVID-19 (2019-nCoV) Data Repository by Johns Hopkins University Center for Systems Science and Engineering (JHU CSSE)](https://github.com/CSSEGISandData/COVID-19), which contains the data behind the "2019 Novel Coronavirus Visual Dashboard" (links to the dashboard variants at the repository page). Interestingly, despite that the project appears to be open source with many issues and pull requests imbibed with volunteer spirit (a contributor claims it is a volunteer project [here](https://github.com/CSSEGISandData/COVID-19/issues/2395)), the terms of use in the readme specify that the repo contents are "provided to the public strictly for educational and academic research purposes" and there is no license for the data repository, although there is an [issue](https://github.com/CSSEGISandData/COVID-19/issues/185) open on this matter. 
 
+For as much as it is not a software project with unknown technologies, and despite the plethora of open issues, it does not seem immediately obvious as to how to contribute to the project. The lack of a contributing guide and the fact that the vast majority of issues seem to surround mix-ups or bad imports in the data, which need to be verified and possibly corrected with self-crafted scripts rather than any repository-listed procedure, make it difficult. Moreover, the sheer number of open pull requests, some of which attempt these sorts of fixes, is a discouraging factor to attemtping these sorts of fixes on your own. 
+
+While the cause is most certainly a worthy one, and contributions may be possible with very careful measures, I cannot say this appears to be a straight-forward project in which to get involved.
 
 # FOSS Project Log:
 ### Monday, April 20
