Add section on Tom Callaway blog post

--- a/_posts/2020-05-03-week12.md
+++ b/_posts/2020-05-03-week12.md
@@ -1,4 +1,9 @@
 # Open Source & Business
+This past week I read [the "musings"](https://spot.livejournal.com/327801.html) of notable open source speaker Tom Callaway on the intersection of open source software (he uses that term loosely to encompass everything recognized by the OSI and the FSF, and so do I) and business. Mr. Callaway is well-disposed to offer these reflections given his lengthy experience in this very matter at Red Hat. While the astute will notice that the blog entry is from over a year ago at the time of writing - virtually a lifetime in our rapidly changing tech landscape - and would be well complemented by some follow up research, it is nonetheless a succint, informative and blunt piece. 
+
+Mr. Callaway quickly and effectively lays out the variety of business models for open source software: from the more well established approaches of subscriptions and open core, to the more newly developing "peace of mind" model of professional intermediaries, and the humorous (perhaps not for the lawyers) model of FUD (fear, uncertainty and doubt) around licensing. But the post is no impartial survey of open source business models: on the contrary, beyond the freely admitted bias toward the Red Hat way, there lies a suggestion - which undoubtedly ruffled some feathers - that the open core model is a "half pregnant" state! He argues, and I find myself in amused agreement, that while it is not surprising that many businesses have taken this route (despite the evident variety of approaches) given the low risks involved, these companies also stand to gain minimal reward. They do not benefit from the sort of symbiotic relationships with consumers that he describes in relation to Red Hat, and in the long term they risk being out-maneuvered by open source alternatives to their proprietary feature offerings. 
+
+On the one hand I was happy to note his level-headed footnote that the lack of the market being dominated by open source, particularly the subscription model, is a strong potential argument to the contrary. On the other hand, I can't help but feel like he exposes what can be a very slippery slope. If open core companies - which at least have a foot in the open source door - risk being left behind by simultaneously depending on proprietary software, then where does the trend stop? Gil Yehuda discussed open source software as a *weapon*, a means of neutralizing competitors, in his presentation, but once weapons start getting used, it's hard to stop the "violence". Does this mean that in the efforts to outflank one another and assume the mantle of the most-open-source-of-them-all mean that we will see a slow death of proprietary software? Admittedly that does sound quite unlikely. Proprietary software is like buying certificates of deposit (at least in more recent years): they won't net you much in profits, but they're better than nothing and safer than stocks or gambling. Are they going to go away? Probably not, but mediocrity and obsolesence is a real risk.
 
 # Working in Open Source
 
