Fix headers and add activity header

--- a/_posts/2020-05-03-week12.md
+++ b/_posts/2020-05-03-week12.md
@@ -9,8 +9,12 @@ On the one hand I was happy to note his level-headed footnote that the lack of t
 
 # Open Source & Democracy
 
+
 # FOSS Project Log:
-# Friday, May 1
+### Friday, May 1
 
-# Saturday, May 2
+### Saturday, May 2
 
+### Sunday, May 3
+
+# Other Course-Related Activity:
