Add section on voting tech

--- a/_posts/2020-05-03-week12.md
+++ b/_posts/2020-05-03-week12.md
@@ -8,6 +8,10 @@ On the one hand I was happy to note his level-headed footnote that the lack of t
 # Working in Open Source
 
 # Open Source & Democracy
+This week I also found myself reading a fascinating [article](https://opensource.com/article/19/9/voting-fraud-open-source-solution?) on the (deliberately and cautiously) slow, noble and uphill struggle for open source to come to the aid of election technology and democracy more generally. In particular, the article focuses on the Trust the Vote Project by the Open Source Election Technology (OSET) Institute, and I was very impressed by the disciplined variation of an open source approach they are bringing to the table, namely the "dual-sandbox model" of one environment for fast and innovative development, and the other for carefully reviewed and honed code. While "Linus' Law" will still hold - and is *critically* useful here - the approach is a blend between the cathedral and the bazaar methods: the community can help rapidly develop the pieces, but the final product must be carefully assembled. 
+
+Of course, this is not just a matter of preference for OSET, but rather *the* essential process. In our often Luddite world, many are on standby to distrust any technological solution, as if humans are inherently less fallible than their creations. Moreover, the novelty of a major open source effort to develop elections technology means that much will inevitably be made of the success - or hopefully not failure - of this endeavor. No pressure right? This for a project which, fascinatingly enough, must develop software for "an inherently untrustworthy hardware base". But for all of the inherent challenges, human and technological, I remain hopeful that this serious, measured and inspired meritocratic project is up to the task of ridding us of hopelessly outdated technology, old data standards, and misguided fears. 
+
 
 
 # FOSS Project Log:
