Add note on working in open source

--- a/_posts/2020-05-03-week12.md
+++ b/_posts/2020-05-03-week12.md
@@ -12,8 +12,6 @@ This week I also found myself reading a fascinating [article](https://opensource
 
 Of course, this is not just a matter of preference for OSET, but rather *the* essential process. In our often Luddite world, many are on standby to distrust any technological solution, as if humans are inherently less fallible than their creations. Moreover, the novelty of a major open source effort to develop elections technology means that much will inevitably be made of the success - or hopefully not failure - of this endeavor. No pressure right? This for a project which, fascinatingly enough, must develop software for "an inherently untrustworthy hardware base". But for all of the inherent challenges, human and technological, I remain hopeful that this serious, measured and inspired meritocratic project is up to the task of ridding us of hopelessly outdated technology, old data standards, and misguided fears. 
 
-
-
 # FOSS Project Log:
 ### Friday, May 1
 
@@ -22,3 +20,4 @@ Of course, this is not just a matter of preference for OSET, but rather *the* es
 ### Sunday, May 3
 
 # Other Course-Related Activity:
+Nothing further at this time.
