Add notes on May 1 work

--- a/_posts/2020-05-03-week12.md
+++ b/_posts/2020-05-03-week12.md
@@ -6,6 +6,7 @@ Mr. Callaway quickly and effectively lays out the variety of business models for
 On the one hand I was happy to note his level-headed footnote that the lack of the market being dominated by open source, particularly the subscription model, is a strong potential argument to the contrary. On the other hand, I can't help but feel like he exposes what can be a very slippery slope. If open core companies - which at least have a foot in the open source door - risk being left behind by simultaneously depending on proprietary software, then where does the trend stop? Gil Yehuda discussed open source software as a *weapon*, a means of neutralizing competitors, in his presentation, but once weapons start getting used, it's hard to stop the "violence". Does this mean that in the efforts to outflank one another and assume the mantle of the most-open-source-of-them-all mean that we will see a slow death of proprietary software? Admittedly that does sound quite unlikely. Proprietary software is like buying certificates of deposit (at least in more recent years): they won't net you much in profits, but they're better than nothing and safer than stocks or gambling. Are they going to go away? Probably not, but mediocrity and obsolesence is a real risk.
 
 # Working in Open Source
+All of this discussion of open source and business as of late, in addition to my upcoming graduation from Hunter College, raises the question as to how I would feel working at a company that produced open source software. Admittedly, the *very* first thought that came to me was: oh my, the pressure! Making your code available for public scrutiny is nothing new to anyone with public repositories on platforms such as Github, but this is taking that to another level! Yet this sparked an equal and opposite reaction: we shouldn't exaggerate and suggest that companies don't undergo very serious review and improvement at proprietary software companies, but at the least the code is somewhat "sheltered", at the worst the code can become the result of a pigeon-holed mentality. Think of all of the famous disasters of proprietary software, from major operating systems and lost NASA drones, to buggy video games. This is not to say that an open source way - or an open source community - are wonderful or perfect alternatives, but with proper cultivation they very much can be an approximation of such. Seeing all of the success of Red Hat, Canonical and other companies of the same compatible, I have long been interested in working at such companies, and this course, and all of my recent readings, have only confirmed my impression that yes: I absolutely would work for a company that produces only open sourc software. 
 
 # Open Source & Democracy
 This week I also found myself reading a fascinating [article](https://opensource.com/article/19/9/voting-fraud-open-source-solution?) on the (deliberately and cautiously) slow, noble and uphill struggle for open source to come to the aid of election technology and democracy more generally. In particular, the article focuses on the Trust the Vote Project by the Open Source Election Technology (OSET) Institute, and I was very impressed by the disciplined variation of an open source approach they are bringing to the table, namely the "dual-sandbox model" of one environment for fast and innovative development, and the other for carefully reviewed and honed code. While "Linus' Law" will still hold - and is *critically* useful here - the approach is a blend between the cathedral and the bazaar methods: the community can help rapidly develop the pieces, but the final product must be carefully assembled. 
@@ -14,6 +15,24 @@ Of course, this is not just a matter of preference for OSET, but rather *the* es
 
 # FOSS Project Log:
 ### Friday, May 1
+Friday night I spent a couple of hours rapidly scanning a wide variety of projects, assessing their general caliber, community, issues and room for improvement, in the interest of finding a new project for my group to work on moving forward. I did try to avoid considering projects currently being worked on by other groups in the Open Source Software course (though freeCodeCamp did receive some of my curiosity), and the following is a list of the projects I reviewed:
+
+- OpenCV
+- ROS/ROS2
+- Ubuntu Yaru Theme
+- Vim
+- Arduino
+- Django
+- Matplotlib
+- Numpy
+- Pandas
+- Sklearn
+- Python
+- freeCodeCamp
+- PythonDS
+- TheAlgorithms
+
+I did take a brief look through other projects, having found a nice [list](https://github.com/MunGell/awesome-for-beginners) of open source projects with "Awesome First PR Opportunities" by language, but the above were the major hits. 
 
 ### Saturday, May 2
 
