Complete May 1 summary

--- a/_posts/2020-05-03-week12.md
+++ b/_posts/2020-05-03-week12.md
@@ -24,17 +24,18 @@ Friday night I spent a couple of hours rapidly scanning a wide variety of projec
 - Arduino
 - Django
 - Matplotlib
-- Numpy
+- NumPy
 - Pandas
-- Sklearn
+- scikit-learn
 - Python
 - freeCodeCamp
 - PythonDS
 - TheAlgorithms
 
-I did take a brief look through other projects, having found a nice [list](https://github.com/MunGell/awesome-for-beginners) of open source projects with "Awesome First PR Opportunities" by language, but the above were the major hits. 
+I did take a brief look through a few other projects, having found a nice [list](https://github.com/MunGell/awesome-for-beginners) of open source projects with "Awesome First PR Opportunities" by language, but the above were the major hits. While I was hopeful that in the worst case we could always fall back on projects like PythonDS or TheAlgorithms, which collect samples of data structure or algorithm implementations (and other resources) in one or more languages, this did not truly satisfy and I did end the night still concerned. While not searching for low-hanging fruit, I could not help but be very wary of commitment to a new project after our experience with Atom. In my limited experience, many projects, Atom included, are friendly and relatively active, but once you dig into them you find that issues labeled as "good first issue" or "beginner friendly" are in fact *very* difficult for an outsider to debug and are really the "easiest" of the *remaining* bugs, which may not be much for a mature project. Moreover, even where issues do regard genuinely "easier" matters with clear cut solutions, larger projects such as the Python libraries mentioned above, are so picked over that it becomes difficult to determine what remains to be done and stake your contribution claim.
 
 ### Saturday, May 2
+
 
 ### Sunday, May 3
 
