--- a/_posts/2020-05-03-week12.md
+++ b/_posts/2020-05-03-week12.md
@@ -35,9 +35,12 @@ Friday night I spent a couple of hours rapidly scanning a wide variety of projec
 I did take a brief look through a few other projects, having found a nice [list](https://github.com/MunGell/awesome-for-beginners) of open source projects with "Awesome First PR Opportunities" by language, but the above were the major hits. While I was hopeful that in the worst case we could always fall back on projects like PythonDS or TheAlgorithms, which collect samples of data structure or algorithm implementations (and other resources) in one or more languages, this did not truly satisfy and I did end the night still concerned. While not searching for low-hanging fruit, I could not help but be very wary of commitment to a new project after our experience with Atom. In my limited experience, many projects, Atom included, are friendly and relatively active, but once you dig into them you find that issues labeled as "good first issue" or "beginner friendly" are in fact *very* difficult for an outsider to debug and are really the "easiest" of the *remaining* bugs, which may not be much for a mature project. Moreover, even where issues do regard genuinely "easier" matters with clear cut solutions, larger projects such as the Python libraries mentioned above, are so picked over that it becomes difficult to determine what remains to be done and stake your contribution claim.
 
 ### Saturday, May 2
+On Saturday, Jessica, Boubacar and I reunited and refused to part ways for a couple of hours until we had settled on a new direction and project. This involved a couple of hours of review and deliberation. In particular we all reviewed potential issues with Pandas, but unfortunately came to naught. I cautiously recommended that OpenCV may ultimately be our salvation for this project. Significantly, this [issue](https://github.com/opencv/opencv/issues/9520) and [improvement plan](https://github.com/opencv/opencv/wiki/Documentation-improvement-plan) - old but still open - are clear statements of intention to improve the state of OpenCV tutorials and documentation, which are certainly in some need of some TLC. Specifically, the tutorials seem to have initially been split into separate language bins for C++, Python and JavaScript, many tutorials are out of date or incomplete, and the quality (grammar, depth of theoretical coverage, code explanation, citations, additional resources, etc.) varies widely. While some serious work has been done to consolidate and improve the tutorials into a single, cohesive and consistent body of tutorials, there remains much to be done.
 
+ This did not mean putting aside the possibility of code contributions - and in fact editing or creating tutorials, samples or documentations may yet yield opportunities for doing exactly that - it is reassuring to have meaningful opportunities to contribute to a project without needing to be a domain *expert*. After some further discussion, we decided to engage in something of a "blitz" review of tutorials, documentation, contributing documents, and issues. Our continuing progress in that regard, as always, can be found [here](https://hackmd.io/@drizhekGSpqvVRsSWVyXNA/BkbIno0EI).
 
 ### Sunday, May 3
+Sunday, by necessity, was a somewhat shorter meeting that more or less was a recap of our first impressions, the resources and issues we have discovered and gathered thus far, and planning ahead for development. There were no major revelations: only consensus that there remained plenty of work to be done in tutorials and related code, and that our efforts would be best spent, and well appreciated, by helping in the consolidation and improvement efforts mentioned above. While discussing the contribution and introduction documents, I did notice that two links to NumPy documentation in an OpenCV tutorial were now broken. Boubacar and I quickly launched into trying to find suitable replacements and the conclusion of that brief but fun and hopefully helpful effort is this [issue](https://github.com/opencv/opencv/issues/17212). If nothing else, the issue is a ~~foot~~ toe in the OpenCV pool, testing the waters!
 
 # Other Course-Related Activity:
 Nothing further at this time.
