Add discussion of Dries Buytaert blog post

--- a/_posts/2020-05-10-week13.md
+++ b/_posts/2020-05-10-week13.md
@@ -1,4 +1,9 @@
 # Thoughts on "Makers and Takers" by Dries Buytaert
+This week I read a blog post, ["Balancing Makers and Takers to scale and sustain Open Source"](https://dri.es/balancing-makers-and-takers-to-scale-and-sustain-open-source), by Dries Buytaert. While I try to approach any new text as an objective reader, I could not help but feel immediately and irrevocably thrown off by this piece. The post opens with: "In many ways, Open Source has won. Most people know that Open Source provides better quality software, at a lower cost, without vendor lock-in." Open source has won in many ways and *most* people know the advantages of open source??! For me this was the first of multiple times where I encountered a bold statement, which then had to be heavily qualified if not contradicted later on. On the one hand, as Vicky Brasseur argued, and I am inclined to agree, open source has certainly made great strides, but also has a long way to go; this article suggests forms of organization and governance that *may* contribute to such improvement but it is nonetheless a pushy start. On the other hand, as Buytaert himself states not long thereafter, "proprietary software dominates most facets of our lives". This is exactly *because most people* put very little thought in their software selections at all: to the extent that they do, most are still likely to feel more comfortable purchasing software from a major company, not peruse the options of small open source community productions. Thus while I do agree with the idea that open source "might be the only way to solve some of the world's most important problems" (such as getting voting technology right) and helping pave the way for open source *business* to succeed is important for the future of open source, I couldn't shake the feeling after this beginning that the post took a very limited view of the issues at stake and that I couldn't quite nail down for *whom* this article was intended.
+
+To be fair, the first "disclaimer" of the article acknowledges that open source becoming more diverse takes priority, and the second disclaimer did note that his suggestions were primarily aimed at "communities that operate with some level of commercial sponsorship, or communities that struggle with issues of long-term sustainability". Point taken, though I am still confused about the latter scenario: to me it seems that to some extent if software is useful, it will always have those who come to contribute, even if that is only in repsonse to proprietary expansions on that open source software. But then, and permit the reductionism, what seems to follow is a very zero-sum analysis of the resources of the open source world being made, used, and abused by companies. Moreover, the only kind of company that seems to factor into his analysis is those that are following the open core model, particularly those that are actually quite eager to just make as much money as possible. Now don't get me wrong, I don't have any illusions that businesses *are run for money* and I enjoy seeing the "Prisonner's Dilemma" and common and public goods theories applied to new realms as much as the next guy, but the fact that Red Hat is mentioned in only brief passing in an article devoted to the relationships between companies and open source software seems revealing. 
+
+Buytaert is right to suggest that open source communities - like garage bands becoming rockstars - must be careful in scaling properly, managing continued growth and navigating a landscape of "predatory" companies. But to me discussing how open source commuities should consider sanctuary in much stricter self-governance (raising serious identity issues) or even the "enemies of old" of government and the corporate world, betrays fears of a limited resource being dominated by "takers". He is careful to make the point that the real and finite resource at stake is consumers, but the open source spirit and continuing history is not a limited resource. Beyond failing to give time to other models of corporate-community interactions in the open source world, I believe the article fails to consider the - pardon the economic pun - "invisible hand" of the open source spirit. Perhaps Tom Callaway has won me over with his views, but I can't help but feel like companies which circle like vultures and take (make proprietary) whatever they can are playing a losing and limited game. In the open source world it seems as though the more you give the more you benefit, and it is this dynamic that will dominate the future, not free-loading "takers". 
 
 # FOSS Project Log:
 ### Monday, May 4
